<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:foregroundGravity="center_vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">


            <TextView
                android:id="@+id/tab_1_ovrvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/overview"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tab_2_gnder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/statcs"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tab_3_demogrfics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/dmgrps"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tab_4_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/ernings"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tab_5_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone"
                android:text="@string/ag_grp"
                android:textSize="16sp" />


        </LinearLayout>
    </HorizontalScrollView>


    <FrameLayout
        android:id="@+id/tab_content_container"
        android:layout_width="match_parent"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_height="match_parent" />

</RelativeLayout>

