<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRAdius="5dp">

    <RelativeLayout
        android:id="@+id/rel_cnt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_450sdp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/backgd_app_odd">

        <TextView
            android:id="@+id/lead_level_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/milestone"
            android:textColor="@color/AppBlue"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/backgd_app_red"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/exl_sr_close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_close" />


        <LinearLayout
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/exl_sr_close"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:visibility="visible">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls1"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls4"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls5"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls6"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls7"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/note"
                android:background="@drawable/bg_orange"
                android:padding="@dimen/dimen_5dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls2"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mls3"
                android:textColor="@color/AppBlue"
                android:textSize="15sp"
                android:textStyle="bold" />




        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>